<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thefirstlineofcode.sand.demo.app.android.ConfigureStreamActivity">

    <TextView
        android:id="@+id/tv_title_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:text="@string/stream_title_host" />

    <TextView
        android:id="@+id/tv_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:minHeight="48dp"
        tools:ignore="LabelFor"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_title_host"
        app:layout_constraintStart_toEndOf="@+id/tv_title_host" />

    <TextView
        android:id="@+id/tv_title_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:text="@string/steam_title_port"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_host"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_host" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/stream_default_port"
        tools:ignore="LabelFor"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_title_port"
        app:layout_constraintStart_toEndOf="@+id/tv_title_port" />

    <TextView
        android:id="@+id/tv_title_tls_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:text="@string/stream_title_tls_required"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_port"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_port" />

    <CheckBox
        android:id="@+id/cb_tls_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_title_tls_required"
        app:layout_constraintStart_toEndOf="@+id/tv_title_tls_required" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="configureStream"
        android:text="@string/stream_ok"
        android:textAllCaps="false"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="@+id/cb_tls_required"
        app:layout_constraintTop_toBottomOf="@+id/cb_tls_required" />
</androidx.constraintlayout.widget.ConstraintLayout>
