<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="com.thefirstlineofcode.amber.bridge.DiscoveryActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:id="@+id/discovery_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/discovery_start_scanning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discovery_bluetooth_scan" />

            <ProgressBar
                android:id="@+id/discovery_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:indeterminateOnly="true"
                android:visibility="gone" />
        </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/discovery_device_candidates_list"
            android:layout_gravity="bottom|top"
            android:layout_weight="0.83" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/discovery_note"
            android:id="@+id/discovery_note"
            android:textStyle="bold"
            android:textColor="@color/text_color_secondary"
            android:gravity="center_horizontal|bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/discovery_connected_devices_hint"
            android:id="@+id/discovery_hint"
            android:textColor="@color/text_color_secondary"
            android:textIsSelectable="true" />
    </LinearLayout>
</LinearLayout>
